moved stuff to their respective controller